# ffifa-2026-fantasy-draft

./: .env.example  .gitignore  LICENSE  README.md  credentials.json.example  fix_group_d_schedule.py  pyproject.toml  requirements.txt
docs/: BUGFIX_VALIDATION.md  CODE_REVIEW_OPENAI.md  DEMO_MODE.md  HOW_VALIDATION_WORKS.md  IMPLEMENTATION_SUMMARY.md  RENDER_DEMO_DEPLOYMENT.md  SETUP_FOOTBALL_API.md  SETUP_GOOGLE_SHEETS.md  SPREADSHEET_PREVIEW.md  SYNC_CONFIGURATION.md  TESTING_GUIDE.md
src/: config.py  demo.py  main.py  seed_data.py  server.py  validation.py
src/data_sources/: __init__.py  football_api.py  football_api_stub.py  llm_fallback.py
src/models/: __init__.py  draft_pick.py  match.py  player.py  team.py
src/scoring/: __init__.py  calculator.py  rules.py
src/sheets/: client.py  formatting.py  players.py  schedule.py  scores.py  scoring_rules.py
src/sync/: __init__.py  recovery.py  scheduler.py  state_manager.py
src/utils/: logger.py  rate_limiter.py  retry.py
static/: index.html
templates/: scoring_rules.json  sheet_schema.json
tests/: test_football_api.py  test_recovery.py  test_scoring.py  test_sheets_client.py  test_sync.py  test_validation.py
