[project]
name = "fifa-2026-fantasy-draft"
version = "1.0.0"
description = "FIFA 2026 World Cup Fantasy Draft — team-based scoring app with Google Sheets backend"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "gspread>=6.1.0",
    "google-auth>=2.29.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "tenacity>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
fifa-draft = "src.main:main"
fifa-seed = "src.seed_data:seed_spreadsheet"
fifa-server = "src.server:start"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
